# yoke

./: .dockerignore  .gitignore  .test_durations  AGENTS.md  CLA.md  CODEX.md  CONTRIBUTING.md  Dockerfile  README.md  conftest.py  pyproject.toml
.claude/: agents  rules  settings.json
.claude/skills/: yoke
.codex/: agents  hooks.json
.github/workflows/: cla.yml  platform-release-bridge.yml  yoke-build-artifacts.yml  yoke-ci.yml  yoke-deploy-bridge.yml  yoke-release.yml  yoke-server-image.yml
.yoke/: .gitignore  README.md  board-art  board.json  deployment-flows.json  file-line-exceptions  labels  lint-config  packs.json  project.config  template-deviations.md  test-inventory.md
.yoke/docs/: charge-frontier.md  commands.md  lifecycle.md  session-offer-contract.md
.yoke/runbooks/: deploy-checklist.md  deploy.md  recovery.md
brand/: README.md
docs/: INSTALLER-TESTING-MAC.md  INSTALLER-TESTING.md  OVERVIEW.md  agents.md  atlas.md  browser-scenario-schema.md  browser-substrate.md  charge-frontier.md  cold-start-test-mac.md  commands.md  db-reference.md  event-catalog.md  event-contract.md  github-actions-gotchas.md  github-app-ci-custody.md  github-app-operations.md  github-connections.md  github-permissions.md  github-sync.md  harness-adapter-template.md  harness-bootstrap.md  harness-substrate.md  hook-parity-map.md  hooks.md  installer-github-app-testing.md  installer-session-telemetry.md  lifecycle.md  local-setup-reference.md  local-setup.md  onboard-external-project.md  path-claims.md  prompt-philosophy.md  qa-platform.md  scratch-root.md  self-host.md  session-identity-contract.md  session-offer-contract.md  source-dev-worktree-cleanup.md  state-management.md  structured-logging-standard.md  (+2 more)
docs/archive/: 1246-proof.md  2026-03-17-sun-959-ticket-brief.md  2026-03-20-sun-1081-session-investigation.md  2026-03-20-sun-1081-ticket-drafts.md  2026-04-03-sun-1227-codex-hook-spike.md  2026-04-03-sun-1227-technical-plan.md  2026-04-07-transition-regression-postmortem.md  BACKLOG-GOING-FORWARD-PLAN.md  MASTER-PLAN-DARIUS.md  MEGAPROMPT.md  PAD-ARCHIVE.md  PROMPTS-legacy.md  README.md  agent-conventions.md  backlog-schema.md  browser-qa-scenarios.md  db-migration-audit-2026-03-02.md  db-output-format.md  dedup.md  event-registry-design.md  events-incident-followup.md  hooks.md  next-tickets.md  scripts.md  service-migration.md  shell-history.md  shell-inventory.md  template-drift-audit.md  v1-implementation.md  working-notes-archive.md  worktree-lifecycle.md  yoke-current-master-plan.md  yoke-sprint3-master-plan.md  zero-shell-proof.md  zero-shell-subprocess-audit.md
docs/browser-substrate/: scenario-orchestration.md
docs/db-reference/: events-and-deployments.md  functions.md  items-and-epics.md  migration-model-capabilities.md  path-claims.md  projects-and-flows.md  qa-and-sessions.md  qa-cli-and-body-write.md  status-lifecycle.md
docs/event-contract/: isolation-and-querying.md  migration-guidance.md  reserved-fields-dr1-qa1.md
docs/qa-platform/: cli-reference.md
docs/releases/: README.md  v0.1.1+launch.1.md  v0.1.1+launch.10.md  v0.1.1+launch.11.md  v0.1.1+launch.12.md  v0.1.1+launch.14.md  v0.1.1+launch.15.md  v0.1.1+launch.16.md  v0.1.1+launch.17.md  v0.1.1+launch.18.md  v0.1.1+launch.19.md  v0.1.1+launch.2.md  v0.1.1+launch.21.md  v0.1.1+launch.22.md  v0.1.1+launch.23.md  v0.1.1+launch.24.md  v0.1.1+launch.25.md  v0.1.1+launch.26.md  v0.1.1+launch.27.md  v0.1.1+launch.28.md  v0.1.1+launch.29.md  v0.1.1+launch.3.md  v0.1.1+launch.30.md  v0.1.1+launch.31.md  v0.1.1+launch.32.md  v0.1.1+launch.33.md  v0.1.1+launch.34.md  v0.1.1+launch.35.md  v0.1.1+launch.36.md  v0.1.1+launch.37.md  v0.1.1+launch.39.md  v0.1.1+launch.4.md  v0.1.1+launch.40.md  v0.1.1+launch.41.md  v0.1.1+launch.5.md  v0.1.1+launch.6.md  v0.1.1+launch.7.md  v0.1.1+launch.8.md  v0.1.1+launch.9.md
docs/session-offer-contract/: action-payloads.md  event-shapes.md
docs/state-management/: delivery-internals.md
docs/structured-logging-standard/: agent-session-pattern.md  js-ts-template.md  marketing-attribution.md  property-groups.md  python-templates.md  source-type-composition.md  taxonomy-appendix.md
ops/: ephemeral_cleanup.py  ephemeral_port.js  nginx-ephemeral.conf
ops/core-service/: docker-compose.ephemeral.yml.tmpl
ouroboros/: patterns.md
ouroboros/patterns/: agent-behavior-patterns.md  curate-2026-04-04-patterns.md  (+5 more)
runtime/: __init__.py
(+2701 files in other folders)
